--- a/flask_todo/app/static/css/colors.css
+++ b/flask_todo/app/static/css/colors.css
@@ -11,4 +11,6 @@
     --modal-border-color: #888;
     --overlay-color: rgba(0, 0, 0, 0.5);
     --gray-text-color: #6c757d;
+    --gradient--color-1: #D9AFD9;
+    --gradient--color-2: #97D9E1;
 }
