--- a/flask_todo/app/static/css/styles.css
+++ b/flask_todo/app/static/css/styles.css
@@ -4,6 +4,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: var(--background-color);
+    background-image: linear-gradient(0deg, var(--gradient--color-1) 0%, var(--gradient--color-2) 100%);
     color: var(--text-color);
     margin: 0;
     padding: 0;
